--- a/css/style.css
+++ b/css/style.css
@@ -279,8 +279,8 @@ h1, h2, h3, h4, h5, h6, p {
   margin-bottom: 1rem;
 }
 .main .sobre-mi .contenedor-sobre-mi .texto .descripcion {
-  color: rgb(131, 157, 17);
-  font-weight: 100;
+  color:#00ff00;
+  font-weight: 10000;
   line-height: 1.5;
 }
 .main .sobre-mi .contenedor-sobre-mi .texto p {
