--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
 
 body {
   font-family: "Oswald", sans-serif;
-  background: url("../img/prism1.png") repeat;
+  background: url("../img/back.png") repeat;
   background-attachment: fixed;
   color: #ffffff;
 }
