--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background-color:#14adadde;
+  background-color:#ffffff;
 }
 
 ::-webkit-scrollbar-thumb {
