--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ h1, h2, h3, h4, h5, h6, p {
 .main .sobre-mi {
   min-height: 100vh;
   padding: 3rem 0;
-  background: #ffffff;
+  background: #033b90;
   color: #000000;
   margin-bottom: 3rem;
 }
