--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,8 @@ h1, h2, h3, h4, h5, h6, p {
   border: 0.125rem solid #969a97;
 }
 .main .proyectos .contenedor-proyectos .proyecto .info h4 {
-  text-align: left;
-  margin-bottom: 2.5rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
   font-size: 1.3rem;
 }
 .main .proyectos .contenedor-proyectos .proyecto .info h5 {
