--- a/asignaturas/microinformatica/css/style.css
+++ b/asignaturas/microinformatica/css/style.css
@@ -25,7 +25,7 @@ html {
 
 body {
   font-family: "Oswald", sans-serif;
-  background: url("../img/circuito.png") repeat;
+  background: url("../img/back-blue.jpg") repeat;
   background-attachment: fixed;
   color: #ffffff;
 }
