--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,16 @@ html {
   border-radius: 5px;
 }
 
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-color: #b61924;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
 body {
   font-family: "Oswald", sans-serif;
   background: url("../img/back.png") repeat;
