--- a/css/style.css
+++ b/css/style.css
@@ -23,15 +23,7 @@ html {
   border-radius: 5px;
 }
 
-#particles-js{
-  width: 100%;
-  height: 100%;
-  background-color: #b61924;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-}
+
 
 body {
   font-family: "Oswald", sans-serif;
@@ -39,6 +31,8 @@ body {
   background-attachment: fixed;
   color: #ffffff;
 }
+
+/* ---- particles.js container ---- */
 
 .contenedor {
   width: 95%;
