--- a/asignaturas/microinformatica/css/style.css
+++ b/asignaturas/microinformatica/css/style.css
@@ -34,7 +34,7 @@ body {
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color: #b61924;
+  background-color: #1943B6;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
