--- a/asignaturas/microinformatica/css/style.css
+++ b/asignaturas/microinformatica/css/style.css
@@ -39,9 +39,10 @@ h1, h2, h3, h4, h5, h6, p {
 
 .titulo {
   margin-bottom: 4rem;
-  text-align: center;f
-  font-size: 2rem;
-  font-weight: 500;
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  color: white;
 }
 
 .boton-arriba {
